--- a/huaxiexiyan-erp/build.gradle
+++ b/huaxiexiyan-erp/build.gradle
@@ -24,6 +24,7 @@ dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.6"
 		mavenBom "com.alibaba.cloud:spring-cloud-alibaba-dependencies:2023.0.1.0"
+        mavenBom "com.baomidou:mybatis-plus-bom:3.5.12"
 	}
 }
 
@@ -43,25 +44,33 @@ repositories {
 }
 
 dependencies {
-	implementation 'com.huaxiexiyan:huaxiexiyan-common-api:0.0.1-SNAPSHOT'
-	//服务健康
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	//cloud组件
-	// spring 家族
-	implementation('org.springframework.boot:spring-boot-starter-web') {
-		transitive = true
-		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
-	}
-	implementation 'org.springframework.boot:spring-boot-starter-undertow'
-	// 服务注册与发现
-	implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config'
-	implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery'
-	// 工具依赖
-	annotationProcessor 'org.projectlombok:lombok'
-	compileOnly 'org.projectlombok:lombok'
-	testAnnotationProcessor 'org.projectlombok:lombok'
-	testCompileOnly 'org.projectlombok:lombok'
-	// 测试组件
+    implementation 'com.huaxiexiyan:huaxiexiyan-common-api:0.0.1-SNAPSHOT'
+    //服务健康
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    //cloud组件
+    // spring 家族
+    implementation('org.springframework.boot:spring-boot-starter-web') {
+        transitive = true
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
+    }
+    implementation 'org.springframework.boot:spring-boot-starter-undertow'
+    // 配置解释器
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+    // 服务注册与发现
+    implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config'
+    implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery'
+    //
+    implementation 'com.auth0:java-jwt:4.4.0'
+    // 持久化
+    implementation 'com.baomidou:mybatis-plus-spring-boot3-starter'
+    implementation 'com.baomidou:mybatis-plus-jsqlparser'
+    implementation 'org.postgresql:postgresql:42.6.0'
+    // 工具依赖
+    annotationProcessor 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+    testCompileOnly 'org.projectlombok:lombok'
+    // 测试组件
 //    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 //    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
