--- a/huaxiexiyan-gateway/.gitignore
+++ b/huaxiexiyan-gateway/.gitignore
@@ -31,9 +31,9 @@ hs_err_pid*
 /src/main/generated/
 
 # 区分国内源，忽略部分文件
-gradle
+#gradle
 ./build.gradle
-settings.gradle
+#settings.gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
