--- a/huaxiexiyan-gateway/gradle/wrapper/gradle-wrapper.properties
+++ b/huaxiexiyan-gateway/gradle/wrapper/gradle-wrapper.properties
@@ -1,10 +1,11 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 #distributionUrl=https\://services.gradle.org/distributions/gradle-8.14.2-bin.zip
-distributionUrl=https\://mirrors.cloud.tencent.com/gradle/gradle-8.14.2-bin.zip
+distributionUrl=https\://mirrors.cloud.tencent.com/gradle/gradle-8.14.3-bin.zip
 networkTimeout=10000
 validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
 org.gradle.jvmargs="-Xmx2g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8"
 org.gradle.parallel=true
+org.gradle.java.home=D:/Software/Programme/Java/JDK/jdk-21.0.7
