--- a/.github/workflows/gateway-ci.yml
+++ b/.github/workflows/gateway-ci.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - 'main'
     paths:
-      - 'catguild-gateway/**'
+      - 'huaxiexiyan-gateway/**'
   #pull_request:
   #  branches: [ main ]
 
@@ -18,11 +18,11 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17 and Cache Gradle
+      - name: Set up JDK 21 and Cache Gradle
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '17'
+          java-version: '21'
           cache: 'gradle'
 
       - name: Log in to Docker Hub
@@ -33,5 +33,5 @@ jobs:
 
       - name: Build project
         run: |
-          chmod +x ./gradlew
-          ./gradlew :catguild-gateway:jib
+          chmod +x ./huaxiexiyan-gateway/gradlew
+          ./huaxiexiyan-gateway/gradlew jib
